# internal/observer/service/interfaces.go
@@ -21,9 +21,9 @@ type LogsQuerier interface {
 	QueryLogs(ctx context.Context, req *types.LogsQueryRequest) (*types.LogsQueryResponse, error)
 }
 
-// ClusterLogsQuerier is the interface for querying cluster logs.
-type ClusterLogsQuerier interface {
-	QueryClusterLogs(ctx context.Context, req *types.ClusterLogsQueryRequest) (*types.ClusterLogsResponse, error)
+// PlatformLogsQuerier is the interface for querying platform logs.
+type PlatformLogsQuerier interface {
+	QueryPlatformLogs(ctx context.Context, req *types.PlatformLogsQueryRequest) (*types.PlatformLogsResponse, error)
 }
 
 // EventsQuerier is the interface for querying Kubernetes events.
